# bedrock-schedule-connector

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_AGENT_STYLE_GUIDE.md  CHANGELOG.md  CODEBASE_SIZE_ANALYSIS 2.md  CODEBASE_SIZE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.client  Dockerfile.combined  README.md  REFACTORING_COMPLETE 2.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN 2.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SECURITY.md  coolify.json  docker-compose.staging.yml  docker-compose.yml  nginx.combined.conf  nginx.conf  pyproject.toml  supervisord.conf
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
client/e2e/: flow-optimizer.spec.ts  legacy-connectors.spec.ts  navigation.spec.ts
client/src/: App.tsx  index.css
client/src/components/: AppSidebar.tsx  ConnectorCard.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorState.test.tsx  ErrorState.tsx  Layout.tsx  (+2 more)
client/test-results/: .last-run.json
config/: prometheus-staging.yml
docs/: ARCHIVE-UI-task-list.md  ARCHIVE-agent-task-list.md  ARCHIVE.md  BLUEPRINT.md  DEPLOYMENT.md  LEGACY_ERP_CONNECTORS.md  MONGOOSE_REST_API_CREDENTIALS.md  UI-TASK-LIST.md  agent task list 2  agent-status.json
docs/DEMO_POSTMAN/: IMS v3 EComm.postman_collection  Kaspar DW.postman_collection.json  Mongoose REST Service.docx
scripts/: test_bedrock_connectivity.py  test_bedrock_scheduler.py
src/kai_erp/: __init__.py  config.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_endpoints.py  test_health.py
tests/test_connectors/: __init__.py  test_bedrock_ops.py
tests/test_core/: test_rest_engine.py  test_staging.py
tests/test_mcp/: test_tools.py
tests/test_models/: test_operations.py
(+112 files in other folders)
